--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@ header common
 ============================================= */
 .mainvisual {
   width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   object-fit: cover;
   object-position: center;
-  background: pink;
   background-image: url(AdobeStock_189657194\ のコピー.jpg);
   background-size: cover;
   background-position: center;
