--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ header common
   height: 100vh;
   max-width: 100vw;
   max-height: 100vh;
+  overflow: hidden;
 }
 .mainvisual .text h2 {
   font-size: 7.5rem;
